Fix refine date inputs being too small (#1405)
* add refine-date class

* set refine-date width in css

* !important width for refine date as to avoid responsive css to change it

* remove size for date inputs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -425,6 +425,9 @@ select.form-input {
     width: 47%;
     position: relative;
 }
+.refine-date {
+    width: 98px!important;	
+}
 
 .categories a {
     display: inline-block;
